Fix spacing in title section

--- a/style.css
+++ b/style.css
@@ -48,20 +48,20 @@ ul.navbar {
 .heading-below-nav {
     display: flex;
     margin-bottom: 3.85rem;
+    justify-content: space-between;
     flex-wrap: nowrap;
+    position: relative;
 }
 
-.heading-below-nav > * :not(.main-heading-img) {
-    display: flex;
-    flex-direction: column;
-    margin: .4rem 3rem 1rem 0rem;
+h1, .main-heading-text > p {
+    padding-bottom: 1rem;
 }
+
 
 .main-heading-img {
     align-self: center;
     justify-self: flex-end;
-    margin-right: 0rem;
-    padding-right: 0rem;
+    margin-left: 6rem;
 }
 
 div.main-heading-text > button {
